--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body, #root {
 }
 
 .main-container {
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url("https://wallpapersite.com/images/pages/pic_w/6680.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -26,7 +26,7 @@ html, body, #root {
     border-radius: 20px;
     border: none;
     margin-bottom: 5%;
-    background: rgba(250, 250, 250, 0.85);
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .city {
@@ -35,8 +35,8 @@ html, body, #root {
     justify-content: center;
     flex-direction: column;
     padding: 40px 8%;
-    border-radius: 20px;
-    background: rgba(250, 250, 250, 0.85);
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.2);
     box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
 
